matroskademux: send gap events instead of segment tricks

This fixes missing frames from being time skipped.

https://bugzilla.gnome.org/show_bug.cgi?id=732372